<resources>
    <string name="app_name">Relative Layout</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 9</string>
    <string name="button10">Button 10</string>
    <string name="button11">Button 11</string>
    <string name="button12">Button 12</string>
    <string name="button13">Button 13</string>
    <string name="button14">Button 14</string>
    <string name="button15">Button 15</string>

</resources>
